<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.gameface.fragment.CreateGroup"
    android:background="@color/black"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Group Name"
            android:textColor="@color/white"

            />

        <EditText
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/grup_name_txt_bg"
            android:textColor="@color/black"
            android:gravity="center"
            android:singleLine="true"
            android:hint="@string/type_grup_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/grup_type_txt"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="60dp"

            />

        <Button
            android:id="@+id/general_group_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt_bg"
            android:text="@string/general_group_bt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"/>



        <Button
            android:id="@+id/team_sport_group_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt_bg"
            android:text="@string/team_sport_bt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>


        <Button
            android:id="@+id/fantasy_football_group_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt_bg"
            android:text="@string/fantasy_football_bt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>



    </LinearLayout>


</LinearLayout>
