<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.gameface.fragment.ForgotPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/forgot_password"
            android:textSize="17sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/enter_email_txt"
            android:textSize="12sp"
            android:layout_marginTop="10dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            >


            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/email"
                android:layout_centerVertical="true"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:layout_toRightOf="@+id/email_icon"
                android:layout_marginLeft="5dp"
                >


                <EditText
                    android:id="@+id/input_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@null"
                    android:hint="@string/hint_email"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                   />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/input_layout_password"
                android:background="@color/white"
                android:layout_marginTop="2dp"
                />


            </RelativeLayout>


            <Button
            android:id="@+id/submit_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt_bg"
            android:text="@string/submit_bt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"/>


            <RelativeLayout
                android:id="@+id/return_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/retun_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/return_button"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/retun_img"
                    android:textColor="@color/white"
                    android:text="@string/return_login"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"/>


            </RelativeLayout>

    </LinearLayout>


</LinearLayout>
